update hardcoded profile images in MyDreamsMenu and fix overflow

--- a/src/styles/pages/_mydreams.scss
+++ b/src/styles/pages/_mydreams.scss
@@ -104,8 +104,8 @@
           justify-content: center;
           align-items: center;
           img {
-            height: 50px;
-            width: 50px;
+            height: 40px;
+            width: 40px;
             border-radius: 50%;
             margin-left: -10px;
             outline: 2px solid var(--primary-light);
